# dbt-to-fhir-projections

./: .gitignore  README.md  config.yaml  pyproject.toml
data/: harmony.csv
projections/common/: AccessPolicy.j2  Participant.j2  ResearchStudy.j2  ResearchSubject.j2  StudyMembership.j2
projections/common/macros/: codeable_concept.j2  study_macros.j2
tests/: eltest.py
tests/fixtures/: tgt_fhir_accesspolicy.yaml  tgt_fhir_accesspolicy_access_policy_code.yaml  tgt_fhir_associatedparty.yaml  tgt_fhir_institution.yaml  tgt_fhir_participant.yaml  tgt_fhir_participant_external_id.yaml  tgt_fhir_participant_race.yaml  tgt_fhir_participantassertion.yaml  tgt_fhir_relativedatetime.yaml  tgt_fhir_researchstudy.yaml  tgt_fhir_researchstudy_external_id.yaml  tgt_fhir_researchstudy_study_acknowledgement.yaml  tgt_fhir_researchstudy_study_condition.yaml  tgt_fhir_researchstudy_study_design.yaml  tgt_fhir_researchstudy_study_focus.yaml  tgt_fhir_researchstudy_study_personnel.yaml  tgt_fhir_researchsubject.yaml  tgt_fhir_studymembership.yaml
